Oppdatert med gpt 4 mini modell

--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,15 @@
 .Skrivefelt button {
   padding: 10px;
 }
+
+.Bruker {
+  text-align: right;
+  background-color: lightgray;
+  padding: 10px;
+}
+
+.Ai {
+  text-align: left;
+  background-color: gray;
+  padding: 10px;
+}
